# garlicjr

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  about-txt.hbs  about.toml  rust-toolchain
.github/workflows/: ci.yml
garlicjr/: Cargo.toml
garlicjr/src/: bootrom.rs  cartridge.rs  cpu.rs  lib.rs  memory.rs  number.rs  opcode.rs  ppu.rs  system.rs  timer.rs
garlicjr/src/memory/: ram.rs
garlicjr/test-data/json-tests/GameBoyCPUTests/v2/: cb_00.json  cb_01.json  cb_02.json  cb_03.json  cb_04.json  cb_05.json  cb_06.json  cb_07.json  cb_08.json  cb_09.json  cb_0a.json  cb_0b.json  cb_0c.json  cb_0d.json  cb_0e.json  cb_0f.json  cb_10.json  cb_11.json  cb_12.json  cb_13.json  cb_14.json  cb_15.json  cb_16.json  cb_17.json  cb_18.json  cb_19.json  cb_1a.json  cb_1b.json  cb_1c.json  cb_1d.json  cb_1e.json  cb_1f.json  cb_20.json  cb_21.json  cb_22.json  cb_23.json  cb_24.json  cb_25.json  cb_26.json  cb_27.json  (+216 more)
garlicjr/tests/: blargg_cpu_instrs.rs
garlicjr_dbg/: Cargo.toml  index.html
garlicjr_dbg/src/: app.rs  lib.rs  main.rs  ui.rs
garlicjr_dbg/src/ui/: cpu.rs  ram.rs  tile_data.rs
src/: bus.rs  cpu.rs  lib.rs  main.rs  opcode.rs
