[package]
name = "garlicjr"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ['notskm']

[dependencies]
sdl2 = { version = "0.34.5", features = ["bundled"] }
imgui = "0.12.0"
glow = "0.13.1"
imgui-glow-renderer = "0.12.0"
imgui-sdl2-support = "0.12.0"

[dev-dependencies]
rstest = "0.21.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
